# tip-jar-dapp-claude

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
app/: next.config.js  package.json
app/components/: Layout.tsx  TipJarCard.tsx
app/pages/: _app.tsx  create.tsx  index.tsx  tip-jars.tsx
app/styles/: globals.css
app/utils/: pdas.ts  program.ts
idl/: tip_jar.json
programs/tip_jar/: Cargo.toml
programs/tip_jar/src/: lib.rs
scripts/: init-platform.ts
tests/: tip_jar.ts
