[package]
name = "tip-jar"
version = "0.1.0"
description = "Creator Tip Jar Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tip_jar"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.31.0"
